noinst_LIBRARIES=libgaim_plugin.a
libgaim_plugin_a_SOURCES=event.cc gaim-plugin.cc cmd.c
libgaim_plugin_a_CFLAGS=@GAIM_CFLAGS@ -I.. -DGAIM_PLUGIN -DGAIM_PLUGINS
libgaim_plugin_a_CXXFLAGS=@GAIM_CFLAGS@ -I.. -DGAIM_PLUGIN -DGAIM_PLUGINS -fpermissive

pixdir=$(prefix)/share/pixmaps/gaim/status/default
pix_DATA=DirectNet.png
